disabling changing library directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,20 +131,20 @@ message(STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
 # When the prefix is /opt/${CMAKE_PROJECT_NAME}, we assume that an "official"
 # build is being created, and thus we install things into specific locations.
 
-if(CMAKE_INSTALL_PREFIX STREQUAL "${CMAKE_INSTALL_DEFAULT_PREFIX}")
-  set(CMAKE_INSTALL_DEFAULT_DATAROOTDIR "")
-  set(CMAKE_INSTALL_DEFAULT_DOCDIR "<CMAKE_INSTALL_DATAROOTDIR>/doc")
-  set(CMAKE_INSTALL_DEFAULT_JAVADIR "<CMAKE_INSTALL_DATAROOTDIR>/classes")
-  if(UNIX AND NOT APPLE)
-    if(BITS EQUAL 64)
-      set(CMAKE_INSTALL_DEFAULT_LIBDIR "lib64")
-    elseif(CMAKE_C_COMPILER_ABI MATCHES "ELF X32")
-      set(CMAKE_INSTALL_DEFAULT_LIBDIR "libx32")
-    else()
-      set(CMAKE_INSTALL_DEFAULT_LIBDIR "lib32")
-    endif()
-  endif()
-endif()
+# if(CMAKE_INSTALL_PREFIX STREQUAL "${CMAKE_INSTALL_DEFAULT_PREFIX}")
+#   set(CMAKE_INSTALL_DEFAULT_DATAROOTDIR "")
+#   set(CMAKE_INSTALL_DEFAULT_DOCDIR "<CMAKE_INSTALL_DATAROOTDIR>/doc")
+#   set(CMAKE_INSTALL_DEFAULT_JAVADIR "<CMAKE_INSTALL_DATAROOTDIR>/classes")
+#   if(UNIX AND NOT APPLE)
+#     if(BITS EQUAL 64)
+#       set(CMAKE_INSTALL_DEFAULT_LIBDIR "lib64")
+#     elseif(CMAKE_C_COMPILER_ABI MATCHES "ELF X32")
+#       set(CMAKE_INSTALL_DEFAULT_LIBDIR "libx32")
+#     else()
+#       set(CMAKE_INSTALL_DEFAULT_LIBDIR "lib32")
+#     endif()
+#   endif()
+# endif()
 
 include(cmakescripts/GNUInstallDirs.cmake)
 
